--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -604,9 +604,10 @@ h5 {
               display: flex;
               align-items: center;
               font-weight: 700;
-              margin-right: 15px;
+              margin-right: 10px;
               background-color: #eee;
               padding-right: 10px;
+              border-radius: 10px;
 
               &:last-child {
                 margin-right: 0;
