--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -283,13 +283,18 @@ h5 {
       color: #000;
     }
 
-    .profile_img {
-      width: 300px;
-      border: 1px solid #ccc;
-      overflow: hidden;
+    .my_introduce {
+      margin-bottom: 50px;
 
-      img {
-        width: 100%;
+      .profile_img {
+        width: 300px;
+        border-radius: 40px;
+        border: 1px solid #ccc;
+        overflow: hidden;
+
+        img {
+          width: 100%;
+        }
       }
     }
 
