--- a/CSS/main.css
+++ b/CSS/main.css
@@ -68,9 +68,10 @@ h5 {
   font-weight: 700;
   font-size: 24px;
   padding: 15px 25px;
+  transition: 0.3s;
 }
 .header nav .navigation a.on {
-  color: rgba(133, 163, 52, 0.65);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .container {
