--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -74,9 +74,10 @@ h5 {
         font-weight: 700;
         font-size: 24px;
         padding: 15px 25px;
+        transition: .3s;
 
         &.on {
-          color: rgba(133, 163, 52, 0.65);
+          background-color: rgba($color: #fff, $alpha: 0.8);
         }
 
       }
@@ -1123,6 +1124,7 @@ h5 {
   #top {
     right: 20px;
     bottom: 20px;
+
     i {
       font-size: 36px;
     }
