--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -269,7 +269,6 @@ h5 {
 
   .row {
     display: flex;
-    align-items: center;
     justify-content: space-between;
 
     p,
@@ -292,10 +291,16 @@ h5 {
         border-radius: 40px;
         border: 1px solid #ccc;
         overflow: hidden;
+        text-align: center;
 
         img {
           width: 100%;
         }
+      }
+      .desc{
+        width: 300px;
+        font-size: 18px;
+        padding-top: 10px;
       }
     }
 
