--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -476,7 +476,7 @@ h5 {
         position: absolute;
         font-size: 16px;
         top: 30px;
-        right: 70px;
+        padding-left: 20px;
       }
     }
   }
